@@ -290,7 +290,7 @@
 #define RECNSPEC           8
 #define RECNFROZEN         8
 #define RECLMAX            12
-#define AICUT              1E-16
+#define AICUT              0.0
 
 /* polarization */
 #define MAXPOL             4 /* maximum multipol for polarization */
